# nuchabal

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: ic.yml  pypi.yml  tests.yml
js/: jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
js/ruxeel/: index.tjt.ts  index.ts  jantape.ts  kel.ts  nuchabäl.ts  relesaxïk.ts  rubanikil.ts
nuchabäl/: __init__.py  kinuk'.json  rukux.py
python/: .gitignore  pyproject.toml
python/rutojtobenïk/: tjt_rukux.py
python/src/nuchabäl/: rukux.py
retamabäl/: ch'ab'äl.json  tzib'.json
rutojtobenïk/: index.test.ts
src/: ch'ab'äl.json  index.ts
