[tool.poetry]
name = "nuchabal"
version = "0.1.0"
description = "Kinuk\\' ri taq chab\\'äl pa ri xekaj wachulew"
authors = ["Julien Malard-Adam <julien.malard@mail.mcgill.ca>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "nuchabäl", from = "python/ruxeel"}]

[tool.poetry.dependencies]
python = "^3.9"
constellationpy = {version = "^0.2.0", optional = true}

[tool.poetry.extras]
constellation = ["constellationpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
