[project]
name = "nuchabal"
version = "0.1.0"
description = "Kinuk' ri taq chab'äl pa ri xekaj wachulew"
authors = [
    {name = "Julien Jean Malard-Adam", email = "julien.malard@mail.mcgill.ca"},
]
dependencies = []
requires-python = "<4.0,>=3.9"
readme = "README.md"
license = {text = "AGPL-3.0"}


[project.optional-dependencies]
constellation = ["constellationpy<1.0.0,>=0.2.0"]
dev = [
    "pytest>=8.3.5",
    "coverage>=7.8.0",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["ruxeel/nuchabäl"]

[tool.pdm.scripts]
tjt = "pdm run pytest"
cov = "pdm run coverage run -m pytest"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
